--- a/calculadora/src/br/edu/telaPrincipal.fxml
+++ b/calculadora/src/br/edu/telaPrincipal.fxml
@@ -6,13 +6,13 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="300.0" prefWidth="365.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="br.edu.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="300.0" prefWidth="365.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.edu.FXMLDocumentController">
     <children>
         <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
-      <Button fx:id="Soma" layoutX="197.0" layoutY="241.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="54.0" text="+" />
-      <Button fx:id="Sub" layoutX="22.0" layoutY="241.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="54.0" text="-" />
-      <Button fx:id="Mult" layoutX="113.0" layoutY="241.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="54.0" text="*" />
-      <Button fx:id="Div" layoutX="268.0" layoutY="241.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="48.0" text="/" />
+      <Button fx:id="Soma" layoutX="197.0" layoutY="241.0" mnemonicParsing="false" onAction="#Soma" prefHeight="38.0" prefWidth="54.0" text="+" />
+      <Button fx:id="Sub" layoutX="22.0" layoutY="241.0" mnemonicParsing="false" onAction="#Sub" prefHeight="38.0" prefWidth="54.0" text="-" />
+      <Button fx:id="Mult" layoutX="113.0" layoutY="241.0" mnemonicParsing="false" onAction="#Mult" prefHeight="38.0" prefWidth="54.0" text="*" />
+      <Button fx:id="Div" layoutX="268.0" layoutY="241.0" mnemonicParsing="false" onAction="#Div" prefHeight="38.0" prefWidth="48.0" text="/" />
       <TextField fx:id="resultado" layoutX="14.0" layoutY="36.0" prefHeight="31.0" prefWidth="210.0" />
       <Button fx:id="limpar" layoutX="241.0" layoutY="29.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="54.0" text="CE" />
       <TextField fx:id="resultado1" layoutX="14.0" layoutY="105.0" prefHeight="31.0" prefWidth="210.0" />
